<resources>
    <string name="app_name">Vertretungsplan</string>
    <string name="tab_substitutes">Vertretungen</string>
    <string name="tab_homework">Hausaufgaben</string>
    <string name="tab_exams">Klausuren</string>
    <string name="tab_cafeteria">Cafeteria</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="courses">Kurse</string>
    <string name="okay">OK</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="hint_class_shortcut">Klassenkürzel (optional)</string>
    <string name="substitution_title">%1$s in der %2$s. Stunde</string>
    <string name="substitution_text">%1$s in Raum %2$s anstatt %3$s in Raum %4$s</string>
    <string name="error_no_connection">Fehler beim Laden der Daten. Verbindung prüfen und erneut versuchen.</string>
    <string name="error_blank_field">Dieses Feld muss ausgefüllt sein!</string>
    <string name="error_login_failed">Login fehlgeschlagen</string>
    <string name="error_no_date_provided">Kein Datum verfügbar</string>
    <string name="reload">Neu laden</string>
    <string name="change_class_shortcut">Klassenkürzel ändern</string>
    <string name="licenses">Lizenzen</string>
    <string name="shrug">¯\\_(ツ)_/¯</string>
    <string name="info">Information</string>
    <string name="updater_new_version_available">Eine aktuellere Version der Vertretungsplan-App ist verfügbar!</string>
    <string name="download">Download</string>
    <string name="ignore">Ignorieren</string>
    <string name="show_more">Mehr anzeigen</string>
    <string name="menu_edit_entries">Einträge bearbeiten</string>
    <string name="edit">Bearbeiten</string>
    <string name="tab_info">Info</string>
    <string name="save">Speichern</string>
    <string name="login_advanced">Erweitert</string>
    <string name="notification_channel_substitutions_name">Vertretungen</string>
    <string name="notification_channel_substitutions_id" translatable="false">channel_substitutions</string>

    <plurals name="notification_substitutions_title">
        <item quantity="one">%d neue Vertretung</item>
        <item quantity="other">%d neue Vertretungen</item>
    </plurals>

    <array name="courses">
        <item>Französisch</item>
        <item>Spanisch</item>
        <item>Italienisch</item>
        <item>Ethik</item>
        <item>Katholische Religion</item>
        <item>Evangelische Religion</item>
        <item>Chemie</item>
        <item>Physik</item>
        <item>Physik Übungen</item>
        <item>CT/7 (Donnerstag, mit 2. Fremdsprache)</item>
        <item>CT/8 (Dienstag, ohne 2. Fremdsprache)</item>
        <item>ITÜ A (A-Woche, ohne 2. Fremdsprache)</item>
        <item>ITÜ B (B-Woche, mit 2. Fremdsprache)</item>
        <item>GlobalStudies</item>
        <item>Sport 5 (Frau Edbauer, Tanzen)</item>
        <item>Sport 6 (Herr Pfeiffer, Basketball)</item>
        <item>Sport 7 (Herr Riek, Volleyball)</item>
        <item>Sport 8 (Herr Reichle, Fußball)</item>
    </array>

    <array name="courses_values">
        <item>Französisch|F\/B.*</item>
        <item>Spanisch|SP\/B.*</item>
        <item>Italienisch|I\/B.*</item>
        <item>Ethik|ETH.*</item>
        <item>Katholisch|Reli(\/|\ ?)Kath.*|REL.*</item>
        <item>Evangelisch|Reli(\/|\ ?)Ev.*|EVR.*</item>
        <item>Chemie|CH.*</item>
        <item>Physik|PH.*</item>
        <item>PHÜ</item>
        <item>CT(\/|\ ?)7</item>
        <item>CT(\/|\ ?)8</item>
        <item>ITÜ(\/|\ ?)A</item>
        <item>ITÜ(\/|\ ?)B</item>
        <item>GlobalStudies|GS</item>
        <item>S(port)*(\/|\ ?)5</item>
        <item>S(port)*(\/|\ ?)6</item>
        <item>S(port)*(\/|\ ?)7</item>
        <item>S(port)*(\/|\ ?)8</item>
    </array>
</resources>
