<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:visibility="gone">

                <RelativeLayout
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/cardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/info"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/cardText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cardTitle"
                        android:autoLink="web|email"
                        android:ellipsize="end"
                        android:maxLines="5"/>

                    <Button
                        android:id="@+id/showMore"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cardText"
                        android:layout_alignParentEnd="true"
                        android:padding="8dp"
                        android:text="@string/show_more"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <de.jonashaeusler.vertretungsplan.views.EmptyRecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/shrug"
        android:textSize="28sp"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/containerConnectionError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/error_no_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="32dp"
            android:text="@string/error_no_connection"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/reload"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/error_no_connection"
            android:layout_centerHorizontal="true"
            android:text="@string/reload"/>

    </RelativeLayout>

</RelativeLayout>
