<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/save"
            android:layout_below="@id/buttonGroup"
            android:fillViewport="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|top"
                    android:paddingStart="8dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="0dp"
                    android:typeface="monospace" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:text="@string/save" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/buttonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:padding="8dp"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/homework"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_homework" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exams"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_exams" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/info"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_info" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </RelativeLayout>

</LinearLayout>
