<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/username"
            android:padding="16dp"
            android:src="@drawable/ic_person_black"
            android:tint="@color/iconColorActive"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@null"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="56dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/password"
            android:padding="16dp"
            android:src="@drawable/ic_lock_black"
            android:tint="@color/iconColorActive"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="56dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/username"
            android:padding="16dp"
            android:src="@drawable/ic_person_black"
            android:tint="@color/iconColorActive"/>

        <EditText
            android:id="@+id/classShortcut"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@null"
            android:hint="@string/class_shortcut"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="56dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"/>

    <Button
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:id="@+id/login"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

</LinearLayout>